create checkLength function to make sure guess is 5 characters long

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script defer src="./js/app.js"></script>
+    <script defer src="./js/app.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
@@ -53,40 +53,44 @@
             <div class="sqr" id="r6sq5"></div>
         </div>
     </div>
-    <div class="input"></div>
+    <div class="input">
+        <input type="text" class="input" id="inputEl">
+        <button class="button" id="submit-btn">submit</button>
+    </div>
     <div class="keyboard">
         <div class="key-row">
-            <div class="key" id="q"></div>
-            <div class="key" id="w"></div>
-            <div class="key" id="e"></div>
-            <div class="key" id="r"></div>
-            <div class="key" id="t"></div>
-            <div class="key" id="y"></div>
-            <div class="key" id="u"></div>
-            <div class="key" id="i"></div>
-            <div class="key" id="o"></div>
-            <div class="key" id="p"></div>
+            <div class="key" id="q">Q</div>
+            <div class="key" id="w">W</div>
+            <div class="key" id="e">E</div>
+            <div class="key" id="r">R</div>
+            <div class="key" id="t">T</div>
+            <div class="key" id="y">Y</div>
+            <div class="key" id="u">U</div>
+            <div class="key" id="i">I</div>
+            <div class="key" id="o">O</div>
+            <div class="key" id="p">P</div>
         </div>
         <div class="key-row">
-            <div class="key" id="a"></div>
-            <div class="key" id="s"></div>
-            <div class="key" id="d"></div>
-            <div class="key" id="f"></div>
-            <div class="key" id="g"></div>
-            <div class="key" id="h"></div>
-            <div class="key" id="j"></div>
-            <div class="key" id="k"></div>
-            <div class="key" id="l"></div>
+            <div class="key" id="a">A</div>
+            <div class="key" id="s">S</div>
+            <div class="key" id="d">D</div>
+            <div class="key" id="f">F</div>
+            <div class="key" id="g">G</div>
+            <div class="key" id="h">H</div>
+            <div class="key" id="j">J</div>
+            <div class="key" id="k">K</div>
+            <div class="key" id="l">L</div>
         </div>
         <div class="key-row">
-            <div class="key" id="z"></div>
-            <div class="key" id="x"></div>
-            <div class="key" id="c"></div>
-            <div class="key" id="v"></div>
-            <div class="key" id="b"></div>
-            <div class="key" id="n"></div>
-            <div class="key" id="m"></div>
+            <div class="key" id="z">Z</div>
+            <div class="key" id="x">X</div>
+            <div class="key" id="c">C</div>
+            <div class="key" id="v">V</div>
+            <div class="key" id="b">B</div>
+            <div class="key" id="n">N</div>
+            <div class="key" id="m">M</div>
         </div>
     </div>
+    <button class="button" id="reset-btn">restart</button>
 </body>
 </html>
