place created functions into testGuess function to verify if a guess is a valid guess and render appropriate messaging to screen

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <input type="text" class="input" id="inputEl">
         <button class="button" id="submit-btn">submit</button>
     </div>
+    <div id="msg"></div>
     <div class="keyboard">
         <div class="key-row">
             <div class="key" id="q">Q</div>
